hello-world/0-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hello-world
