hello-world/3-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-svc
  namespace: hello-world
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: http
      name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world
  labels:
    name: hello-world
spec:
  rules:
    - host: axatol.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world-svc
                port:
                  name: http
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-world-svc
                port:
                  name: http
